# RTplatec

./: .travis.yml  CMakeLists.txt  README.md
include/: FractalGenerator.h  bounds.hpp  heightmap.hpp  lithosphere.hpp  movement.hpp  plate.hpp  rectangle.hpp
scripts/: installDependencies.sh
src/: CMakeLists.txt  FractalGenerator.cpp  bounds.cpp  geometry.cpp  heightmap.cpp  lithosphere.cpp  mass.cpp  movement.cpp  noise.cpp  plate.cpp  plate_functions.cpp  platecapi.cpp  rectangle.cpp  segment_creator.cpp  segment_data.cpp  segments.cpp  simplerandom.cpp  simplexnoise.cpp  sqrdmd.cpp  utils.cpp  world_point.cpp
test/: CMakeLists.txt
test/integration/: CMakeLists.txt  ShaderLoader.cpp  ShaderLoader.h  inputHandler.cpp  inputHandler.h  main.cpp  simpleRender.cpp  simpleRender.h
test/integration/Shader/: simpleDisplay.fs.glsl
